--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -29,7 +29,7 @@
       <h3><strong>Loading ...</strong></h3>
     </mat-card-header>
     <mat-card-content *ngIf="selected && !retrieving">
-      <json-forms [state]="state"></json-forms>
+      <json-forms [store]="store"></json-forms>
     </mat-card-content>
    
   </mat-card>
