Complete overhaul of the Make it happen app
* update Angular CLI to 7.1.1
* update app to be based on JSON Forms Angular Material
* Reduced number of needed compoenents
* Updated all dependencies

--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -29,7 +29,7 @@
       <h3><strong>Loading ...</strong></h3>
     </mat-card-header>
     <mat-card-content *ngIf="selected && !retrieving">
-      <json-forms [store]="store"></json-forms>
+      <jsonforms-outlet></jsonforms-outlet>
     </mat-card-content>
    
   </mat-card>
