--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body {
-    margin: 0;
+    margin: auto;
+    max-width: 1200px;
     padding: 0;
     font-family: sans-serif;
 }
